# wlterm

./: .clang-format  .dir-locals.el  Makefile  README.md  meson.build
src/: bg-fragment.glsl  bg-vertex.glsl  egl_util.c  egl_util.h  egl_window.c  egl_window.h  font-fragment.glsl  font-geometry.glsl  font-vertex.glsl  font_fragment.glsl  font_geometry.glsl  fragment-shader.glsl  main.c  msdf-fragment.glsl  msdf-util.h  msdf-vertex.glsl  msdf_gl.c  msdf_gl.h  msdf_vertex.glsl  overlay-fragment.glsl  overlay-geometry.glsl  overlay-vertex.glsl  texdebug-fragment.glsl  texdebug-vertex.glsl  vertex-shader.glsl  wlterm.c  wlterm.h  wlterm_bak.c  xdg-shell-unstable-v6-protocol.c
